<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Article1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:text="@string/firstIconText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/background"
            android:paddingStart="@dimen/mediumPadding"
            android:paddingEnd="@dimen/mediumPadding"
            android:paddingTop="@dimen/mediumPadding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/home1"
                android:paddingBottom="@dimen/smallPadding"/>

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Intro" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading1" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para1" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading2" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para2" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading3" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para3" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading4" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para4" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading5" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para5" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading6" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para6" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/Article1_heading7" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_Para7" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="match_parent"
                android:text="@string/conclusion" />

            <TextView
                style="@style/paragraphStyle"
                android:text="@string/Article1_conclusion" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>