<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layoutDirection="ltr"
        android:paddingEnd="@dimen/smallPadding"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="48dp"
            android:layout_height="32dp" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="اردو"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/firstIconDesc"
            android:gravity="center"
            android:src="@drawable/home1" />

        <TextView
            style="@style/homeTextStyle"
            android:text="@string/firstIconText" />

        <ImageView
            android:id="@+id/home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/secondIconDesc"
            android:gravity="center"
            android:src="@drawable/home2" />

        <TextView
            style="@style/homeTextStyle"
            android:text="@string/secondIconText" />

        <ImageView
            android:id="@+id/home3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/thirdIconDesc"
            android:gravity="center"
            android:src="@drawable/home3" />

        <TextView
            style="@style/homeTextStyle"
            android:text="@string/thirdIconText" />

    </LinearLayout>

</LinearLayout>